--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1 class="mb-4">Wybierz pytanie</h1>
 
     <div class="select_wrapper">
-        <select id="question_select" class="form-select mb-4">
+        <select id="question_select">
             <option value="">-- Wybierz pytanie --</option>
             <optgroup label="🧍 O sobie">
                 <option value="1">#1 Kim jestem, skąd pochodzę, coś o sobie</option>
