--- a/index.html
+++ b/index.html
@@ -51,8 +51,15 @@
         
         
             <optgroup label="🖼️ Opisy obrazków">
-                <option value="1.1">#1.1 Ludzie w lesie</option>
-                <option value="1.2">#1.2 Ludzie w parku obok joziora</option>
+                <option value="1.1">#1.1 Schemat opisu obrazka</option>
+                <option value="1.2">#1.2 Ludzie w lesie</option>
+                <option value="1.3">#1.3 Ludzie w parku obok joziora</option>
+            </optgroup>
+
+
+            <optgroup label="📝 Opisy obrazu">
+                <option value="2.1">#2.1 Przydatne zwroty do opisu obrazu / zdjęcia</option>
+                <option value="2.2">#2.2 Opis zdjęcia - Vincent van Gogh</option>
             </optgroup>
         </select>
     </div>
