--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <option value="1.1">#1.1 Schemat opisu obrazka</option>
                 <option value="1.2">#1.2 Ludzie w lesie</option>
                 <option value="1.3">#1.3 Ludzie w parku obok joziora</option>
+                <option value="1.4">#1.4 Dziewczyna na stancję</option>
             </optgroup>
 
 
