--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="select_wrapper">
         <select id="question_select">
-            <option value="">-- Wybierz pytanie --</option>
+            <option value="404">-- Wybierz pytanie --</option>
             <optgroup label="🧍 O sobie">
                 <option value="1">#1 Kim jestem, skąd pochodzę, coś o sobie</option>
                 <option value="2">#2 Dlaczego wybrałem Collegium Da Vinci</option>
@@ -58,7 +58,7 @@
             </optgroup>
 
 
-            <optgroup label="📝 Opisy obrazu">
+            <optgroup label="📝 Opisy zdjęcia">
                 <option value="2.1">#2.1 Przydatne zwroty do opisu obrazu / zdjęcia</option>
                 <option value="2.2">#2.2 Opis zdjęcia - Vincent van Gogh</option>
             </optgroup>
@@ -67,6 +67,7 @@
 
     <div id="answer_container" class="bg-white p-4 rounded shadow-sm"></div>
 
+    <button id="scroll_top_btn" title="Do góry">↑</button>
     <script src="script.js"></script>
 </body>
 </html>
