--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <div class="select_wrapper">
         <select id="question_select">
             <option value="404">-- Wybierz pytanie --</option>
+            <optgroup label="Notatka">
+                <option value="0">#0 Notatka</option>
+            </optgroup>
+            
             <optgroup label="🧍 O sobie">
                 <option value="1">#1 Kim jestem, skąd pochodzę, coś o sobie</option>
                 <option value="2">#2 Dlaczego wybrałem Collegium Da Vinci</option>
