--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <option value="404">-- Wybierz pytanie --</option>
             <optgroup label="Notatka">
                 <option value="0">#0 Notatka</option>
+                <option value="101">#1.0 Ekstrenne Pytania</option>
             </optgroup>
             
             <optgroup label="🧍 O sobie">
@@ -59,6 +60,7 @@
                 <option value="1.2">#1.2 Ludzie w lesie</option>
                 <option value="1.3">#1.3 Ludzie w parku obok joziora</option>
                 <option value="1.4">#1.4 Dziewczyna na stancję</option>
+                <option value="1.5">#1.5 W szkole</option>
             </optgroup>
 
 
